# plc_trigger_recorder

./: .gitignore  README.md  main.py  pyproject.toml  run.ps1  run.sh
src/: config.py  main.py  plc_monitor.py  recorder.py  settings_dialog.py
